# simkul-cli-usk

./: .gitignore  jadwal_cache.json  pyproject.toml
.github/workflows/: absen.yml
simkul/: main.py
simkul/commands/: absen.py  auth.py  jadwal.py
simkul/core/: browser.py  cache.py  captcha.py  scraper.py  session.py
simkul/utils/: config.py  notify.py
